@@ -1,3 +1,6 @@
+2010-12-05 Alex Tutubalin <lexa@lexa.ru>
+	* foveon processing code from dcraw
+
 2010-11-27 Alex Tutubalin <lexa@lexa.ru>
 	* fixed bug with allocation size in lmmse_interpolate
 	* changed malloc to calloc to make valgrind happy with uninitialized
